--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,20 +2,24 @@ main {
     min-height: 80vh;
   }
 
-h3 {
-    padding: 1rem 0;
-  }
-  
 h1 {
     font-size: 1rem;
     padding: 1rem 0;
   }
   
-  h2 {
+h2 {
     font-size: 0.8rem;
     padding: 0.5rem 0;
   }
-  
+
+h3 {
+    padding: 1rem 0;
+  }
+
+h4 {
+  font-size: 0.5rem;
+}
+
   .rating span {
     margin: 0.1rem;
   }
