--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,16 +20,22 @@ h4 {
   font-size: 0.5rem;
 }
 
-  .rating span {
-    margin: 0.1rem;
-  }
+h6 {
+  font-family: 'Segoe UI';
+  font-size: 0.7rem;
+  color:grey;
+}
+
+.rating span {
+  margin: 0.1rem;
+}
 
   /* carousel */
-  .carousel-item-next,
-  .carousel-item-prev,
-  .carousel-item.active {
-    display: flex;
-  }
+.carousel-item-next,
+.carousel-item-prev,
+.carousel-item.active {
+  display: flex;
+}
   .carousel-caption {
     position: absolute;
     top: 0;
@@ -49,11 +55,11 @@ h4 {
   .carousel a {
     margin: 0 auto;
   }
-  @media (max-width: 900px) {
-    .carousel-caption h2 {
-      font-size: 2.5vw;
+@media (max-width: 900px) {
+  .carousel-caption h2 {
+    font-size: 2.5vw;
     }
-  }
+}
 
 .d-f{
     display: flex;
