--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,71 +21,58 @@ h4 {
 }
 
 h6 {
-  font-family: 'Segoe UI';
-  font-size: 0.7rem;
+  font-size: 0.9rem;
   color:grey;
 }
 
+h7 {
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 1rem 0;
+  font-size: 3rem;
+  color:black;
+}
+
+h8 {
+  font-size: 0.9rem;
+  color:black;
+}
 .rating span {
   margin: 0.1rem;
 }
 
-  /* carousel */
+/* Carousel */
+
+/* carousel */
 .carousel-item-next,
 .carousel-item-prev,
 .carousel-item.active {
   display: flex;
 }
-  .carousel-caption {
-    position: absolute;
-    top: 0;
-  }
-  
-  .carousel-caption h2 {
-    color: #605959;
-  }
-  
-  .carousel img {
-    height: 400px;
-    padding: 30px;
-    margin: 40px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .carousel a {
-    margin: 0 auto;
-  }
+.carousel-caption {
+  position: absolute;
+  top: 0;
+}
+
+.carousel-caption h2 {
+  color: #fff;
+}
+
+.carousel img {
+  height: 80vh;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.carousel a {
+  margin: 0 auto;
+}
 @media (max-width: 900px) {
   .carousel-caption h2 {
     font-size: 2.5vw;
-    }
+  }
 }
-
-.d-f{
-    display: flex;
-    justify-content: center;
-    margin-left: 10px;
-}
-.d-f{
-    display: flex;
-    padding: 5px;
-    border: 0.5px solid lightgray;
-    border-radius: 999px;
-    background-color: #f0f2f5;
-}
-.d-f__bar > input {
-    border: none !important;
-    background-color: #f0f2f5;
-}
-
-.d-f__bar > input:focus {
-    outline-width: 0;
-}
-
-.d-f__bar > input::placeholder{
-    text-align: left;
-    font-size: 15px;
-}
-.sd-f__bar > .MuiSvgIcon-root {
-    margin-right: 5px;
+@media (max-width: 430px) {
+  .carousel {
+      display: none;
+  }
 }
