--- a/frontend/src/App .css
+++ b/frontend/src/App .css
@@ -1,10 +1,12 @@
-:root {
-    --white-color: #ffffff;
-    --lightgray-color: #e6e6e6;
+.App {
+  width: 100%;
+  height: 100vh;
+  font-size: 18px;
 }
 
 header {
     display: flex;
+    justify-content: space-around;
     align-items: center;
     width: 100%;
     background: white;
