--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,33 +3,36 @@ main {
   }
 
 h1 {
-    font-size: 1rem;
+    font-size: 2rem;
     padding: 1rem 0;
-  }
-  
-h2 {
-    font-size: 0.8rem;
-    padding: 0.5rem 0;
   }
 
-h3 {
+/*product name*/
+h2 {
     padding: 1rem 0;
+}
+
+/*reviews*/
+h3 {
+    font-size: 0.8rem;
+    padding: 0.5rem 0;
   }
 
 h4 {
   font-size: 0.5rem;
 }
 
-h6 {
-  font-size: 0.9rem;
-  color:grey;
-}
-
-h7 {
+/*title for page*/
+h5 {
   font-family: Arial, Helvetica, sans-serif;
   padding: 1rem 0;
   font-size: 3rem;
   color:black;
+}
+
+h6 {
+  font-size: 0.9rem;
+  color:grey;
 }
 
 h8 {
