--- a/frontend/src/App .css
+++ b/frontend/src/App .css
@@ -1,14 +1,30 @@
-.App {
-  width: 100%;
-  height: 100vh;
-  font-size: 18px;
+*, ::before, ::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
+
+body {
+  background: white;
+  font-family: 'MaisonNeueExtendedTRIAL-Book', sans-serif;
+  letter-spacing: -0.01em;
+  color: black;
+}
+@font-face {
+  font-family: 'MaisonNeueExtendedTRIAL-Bold';
+  src: url('./MaisonNeueExtendedTRIAL-Bold.otf') format(‘opentype‘);
+  }
+
+@font-face {
+  font-family: 'MaisonNeueExtendedTRIAL-Book';
+  src: url('./MaisonNeueExtendedTRIAL-Book.otf') format(‘opentype‘);
+  }
 
 header {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    width: 100%;
+    width: auto;
     background: white;
     color: white;
     height: 100px;
@@ -22,16 +38,13 @@ header .logo h3 {
     padding: 0;
     color: white;
   }
-searchbox {
-  justify-content: flex-end;
+
+footer {
+  font-family: 'MaisonNeueExtendedTRIAL-Book', sans-serif;
+  letter-spacing: -0.01em;
+  color: black;
 }
-nav ul {
-    margin: 0;
-    padding: 0;
-  }
-  
-nav ul li {
-    list-style: none;
-    display: inline-block;
-    margin-right: 30px;
-  }
+
+nav.item :hover {
+  color:white
+}
