--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,42 +3,85 @@ main {
   }
 
 h1 {
-    font-size: 2rem;
-    padding: 1rem 0;
+  display: block;
+  font-size: 3em;
+  margin-top: 0.50em;
+  margin-bottom: 0.67em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+  font-family: 'MaisonNeueExtendedTRIAL-Bold', sans-serif;
+  letter-spacing: -0.01em;
+
   }
 
 /*product name*/
 h2 {
-    padding: 1rem 0;
+  display: block;
+  font-size: 1.5em;
+  margin-top: 0.83em;
+  margin-bottom: 0.83em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
 }
 
 /*reviews*/
 h3 {
-    font-size: 0.8rem;
-    padding: 0.5rem 0;
+  display: block;
+  font-size: 1.19em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+  letter-spacing: -0.01em;
   }
 
+  h3.headerLists:hover {
+    color: #ED547F;
+  }
 h4 {
-  font-size: 0.5rem;
+  display: block;
+  font-size: 1em;
+  margin-top: 1.33em;
+  margin-bottom: 1.33em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
 }
 
 /*title for page*/
 h5 {
-  font-family: Arial, Helvetica, sans-serif;
-  padding: 1rem 0;
-  font-size: 3rem;
-  color:black;
+  display: block;
+  font-size: .83em;
+  margin-top: 1.67em;
+  margin-bottom: 1.67em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+  letter-spacing: -0.01em;
+  font-family: ;
 }
 
 h6 {
-  font-size: 0.9rem;
-  color:grey;
+  display: block;
+  font-size: .67em;
+  margin-top: 2.33em;
+  margin-bottom: 2.33em;
+  margin-left: 0;
+  margin-right: 0;
+  font-family: 'MaisonNeueExtendedTRIAL-Book', sans-serif,;
 }
 
-h8 {
-  font-size: 0.9rem;
-  color:black;
+.size {
+  color: gray;
 }
+
+.companyInfo {
+  margin-top: 1.33em;
+}
+
 .rating span {
   margin: 0.1rem;
 }
@@ -52,4 +95,25 @@ h8 {
   .carousel {
       display: none;
   }
+}
+.d-f_bar {
+  display: inline-block; /* なくても大丈夫だけど、念の為 */
+  position: relative;    /* 基準値とする */
+}
+
+.d-f_bar::before {
+  content: "";           /* 疑似要素に必須 */
+  width: 16px;           /* アイコンの横幅 */
+  height: 16px;          /* アイコンの高さ */
+  background: url(../src/magnifying-glass-solid.svg) no-repeat center center / auto 100%; /* 背景にアイコン画像を配置 */
+  display: inline-block; /* 高さを持たせるためにインラインブロック要素にする */
+  position: absolute;    /* 相対位置に指定 */
+  top: 10px;              /* アイコンの位置。微調整してね */
+  left: 8px;             /* アイコンの位置。微調整してね */
+  border-radius: 2rem;
+}
+
+.d-f_bar input {
+  padding: 5px 0 5px 2em; /* アイコンを設置するため左の余白を多めに指定*/
+  border-radius: 2rem;
 }
