--- a/frontend/src/components/Slider/Slider.css
+++ b/frontend/src/components/Slider/Slider.css
@@ -1,14 +1,14 @@
 .container-slider {
-    max-width: 100%;
+    width: auto;
     height: 500px;
-    margin: 100px auto 0;
+    margin: 0px;
     position: relative;
     overflow: hidden;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
   }
-  @media screen and (max-width: 1920px){
+  @media screen and (max-width: 1290px){
     .container-slider {
-      margin: 10px 10px 0;
+      margin: 0px 0px 0;
     }
   }
   .slide {
