--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,6 +14,18 @@ h1 {
   font-family: 'MaisonNeueExtendedTRIAL-Bold', sans-serif;
   letter-spacing: -0.01em;
   }
+.titleStore {
+  display: block;
+  font-size: 3em;
+  margin-top: 0.50em;
+  margin-bottom: 0.67em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+  font-family: 'MaisonNeueExtendedTRIAL-Bold', sans-serif;
+  letter-spacing: -0.01em;
+  color: #F1575D;
+}
 
 /*product name*/
 h2 {
@@ -41,6 +53,31 @@ h3 {
   h3.headerLists:hover {
     color: #ED547F;
   }
+
+  .productPrice {
+    display: block;
+    font-size: 1.19em;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
+    font-weight: 500;
+    letter-spacing: -0.01em;
+    color: #F1575D;
+  }
+  .contactMe {
+    display: block;
+    font-size: 1.19em;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
+    font-weight: bold;
+    letter-spacing: -0.01em;
+    color: #047ebb;
+    text-align: center;
+  }
+  
 h4 {
   display: block;
   font-size: 1em;
