--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -75,7 +75,7 @@ h3 {
     font-weight: bold;
     letter-spacing: -0.01em;
     color: #047ebb;
-    text-align: center;
+    text-align: left;
   }
   
 h4 {
